# vsqrd-style

./: .dockerignore  .gitignore  Dockerfile  README.md  align_dataset.py  check_audio.py  check_data.py  docker-compose.yml  fix_data.py  lj_bootstrap.pt  phonemize_manifest.py  precompute_mels.py  prepare_data.py  pyproject.toml  train.sh
.codex/: CODEX.md
StyleTTS2/: meldataset.py  train_finetune.py  train_finetune_accelerate.py  train_finetune_tr.py  train_first.py  train_first_tr.py  train_second.py
StyleTTS2/Configs/: config.yml  config_turkish.yml
StyleTTS2/Data/: tr_ood.txt  tr_val.txt
StyleTTS2/Modules/: discriminators.py  hifigan.py  istftnet.py  slmadv.py
StyleTTS2/Utils/PLBERT/: util.py
StyleTTS2/Utils/PLBERT_turkish/: .gitattributes  config.yml  config_ml.yml
embellie/: __init__.py  g2p.py  main.py  txt_norm.py
g2p/: EN_PHONES.md  README.md  pyproject.toml
g2p/misaki/: cutlet.py  en.py  espeak.py  he.py  ja.py  ko.py  num2kana.py  token.py  tone_sandhi.py  transcription.py  vi.py  zh.py  zh_frontend.py
g2p/misaki/g2pkc/: README.md  g2pk.py  numerals.py  table.csv  utils.py
g2p/misaki/vi_cleaner/: README.md  abbreviation_vi.py  acronym_vi.py  cleaner.py  currency_vi.py  num2vi.py  numberical_vi.py  roman_number_vi.py
g2p/misaki/zh_normalization/: README.md  __init__.py
mifi/: __init__.py  g2p.py  main.py  make_voicepack_from_segments.py  meldataset.py  preprocess.py  style_inversion.py  sweep_voicepacks_from_segments.py  text_utils.py  train_kokoro_finetune.py
mifi/fe/: g2p.py  txt_norm.py
minimoy/: losses.py  main.py  meldataset.py  models.py  pyproject.toml  train_finetune.py  train_finetune_accelerate.py  train_first.py  train_second.py
minimoy/Configs/: config.yml  config_ft.yml  config_libritts.yml
minimoy/Modules/: hifigan.py  istftnet.py  slmadv.py
minimoy/Utils/PLBERT/: util.py
minimoy/docs/: fly-tts.md  glow-tts.md  grad-tts.md  hifigan.md  istftnet.md  istftnet2.md  matcha-tts.md  minimoy-40m-plan.md  pl-bert.md  styletts2.md  vits.md  vits2.md  vocos.md
scripts/: train_lj_cloud.sh
tests/: test_g2p.py  test_txt_norm.py
tmp3lhtnv52/: sample.txt
tmp3lhtnv52/mel_cache/combined_dataset/: female_013421.pt  male_020750.pt
voices/: inverted_af_heart.pt  test_voice.pt
