[project]
name = "mifi"
version = "0.1.0"
description = "The smallest possible text-to-speech system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "num2words",
    "misaki[en]",
]

[tool.uv.sources]
misaki = { path = "g2p" }

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
