[project]
name = "mifi"
version = "0.1.0"
description = "The smallest possible text-to-speech system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchaudio",
    "num2words",
    "misaki[en]",
    "loguru",
    "soundfile",
    "pydub",
    "pyyaml",
    "munch",
    "librosa",
    "matplotlib",
    "accelerate",
    "transformers",
    "einops",
    "einops-exts",
    "tqdm",
    "monotonic-align",
]

[tool.uv.sources]
monotonic-align = { git = "https://github.com/resemble-ai/monotonic_align.git" }

[tool.uv.workspace]
members = [
    "minimoy",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
