[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "misaki"
version = "0.9.4"
description = "G2P engine for TTS"
readme = "README.md"
authors = [
    { name = "hexgrad", email = "hello@hexgrad.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8, <3.14"
dependencies = [
    "addict",
    "pip>=25.0.1", 
    # ^ Spacy needs pip within Python, uv lacks pip by default
    "regex",
]

[project.optional-dependencies]
en = ["num2words", "spacy", "spacy-curated-transformers", "phonemizer-fork", "espeakng-loader", "torch", "transformers"]
ja = ["fugashi", "jaconv", "mojimoji", "unidic", "pyopenjtalk"]
ko = ["jamo", "nltk"]
zh = ["jieba", "ordered-set", "pypinyin", "cn2an", "pypinyin-dict"]
vi = ["num2words", "spacy", "spacy-curated-transformers", "underthesea"]
he = ["mishkal-hebrew>=0.3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
