[project]
name = "minimoy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "monotonic-align",
    "munch>=4.0.0",
    "nltk>=3.9.3",
    "pydub>=0.25.1",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "typing-extensions>=4.15.0",
]

[tool.uv.sources]
monotonic-align = { git = "https://github.com/resemble-ai/monotonic_align.git" }
